tests/fail/Ternary.java
package fail;

import java.lang.System;

public class Ternary {
    public static void main(String[] args) {
        System.out.println(main(null) ? "wee" : "woo");
    }
}
